2010-07-13  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/signal.h (sighandler_t): Only define if _POSIX_SOURCE
	is undefined.

2010-07-06  Corinna Vinschen  <corinna@vinschen.de>

	* libc/posix/rewinddir.c (rewinddir): Remove incorrect cast to off_t.
	* libc/sys/rtems/sys/dirent.h (_seekdir): Add prototype.
	* libc/sys/linux/sys/dirent.h (_seekdir): Fix prototype to use long
	rather than off_t.

2010-07-01  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* libc/include/signal.h (sighandler_t): Add typedef.

2010-06-29  Antony King  <antony.king@st.com>

	* libc/ctype/ctype_.c (__ctype_ptr): Reinstate definition (guarded by
	_NEED_OLD_CTYPE_PTR_DEFINITION) for backwards compatibility with newlib
	1.16.0 and earlier.

2010-06-28  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* libc/include/sys/stat.h: Add ACCESSPERMS, ALLPERMS, and DEFFILEMODE.

2010-06-18  Pavel Pisa <ppisa4lists@pikron.com>

	* libc/include/machine/ieeefp.h[__arm__][!__VFP_FP__]: Set to
	__IEEE_BIG_ENDIAN and set __IEEE_BYTES_LITTLE_ENDIAN appropriately
	based on __ARMEL flag.
	* libc/include/machine/endian.h: To set byte order to LITTLE_ENDIAN,
	check for __IEEE_LITTLE_ENDIAN or __IEEE_BYTES_LITTLE_ENDIAN.

2010-06-09  Paul Brook  <paul@codesourcery.com>

	* libc/include/sys/reent.h (_reent): Adjust _REENT_SMALL to be
	binary compatible with normal layout.
	(_REENT_INIT): Adjust to match struct layout.

2010-06-08  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/wordexp.h: Add __cplusplus wrapper.

2010-06-08  Jeff Johnston  <jjohnstn@redhat.com>

	* configure.in: Add test for enable-newlib-register-fini
	to set the _WANT_REGISTER_FINI flag.
	* configure: Regenerated.
	* Makefile.in: Ditto.
	* newlib.hin: Add _WANT_REGISTER_FINI flag.
	* libc/stdlib/__call_atexit.c: Add test for
	_WANT_REGISTER_FINI to enable the register_fini function.

2010-06-04  Mark Mitchell  <mark@codesourcery.com>

	* libc/stdlib/__call_atexit.c (__libc_fini): Declare.